<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.myapplication.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/screenMargin"
    android:paddingLeft="@dimen/screenMargin"
    android:paddingRight="@dimen/screenMargin"
    android:paddingTop="@dimen/screenMargin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageSizeMedium"
        android:layout_weight="1"
        android:contentDescription="@string/cdes_logo"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:text="@string/question1"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emergency_number"
        android:inputType="number"
        android:textColorHint="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:paddingTop="@dimen/questionHeaderPadding"
        android:text="@string/question2"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cpr_procedure"
       android:textColor="@color/defaultText"
       android:textSize="@dimen/textSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/imageSize"
            android:layout_weight="1"
            android:contentDescription = "@string/cdes_1"
            android:src="@drawable/version1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/imageSize"
            android:layout_weight="1"
            android:contentDescription = "@string/cdes_2"
            android:src="@drawable/version2"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/imageSize"
            android:layout_weight="1"
            android:contentDescription = "@string/cdes_3"
            android:src="@drawable/version3"/>
    </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_option_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <RadioButton
                android:id="@+id/radio_option_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

            <RadioButton
                android:id="@+id/radio_option_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:paddingTop="@dimen/questionHeaderPadding"
        android:text="@string/question3"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPadding"
        android:text="@string/skin_burn"
        android:textColor="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <CheckBox
        android:id="@+id/checkbox_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"/>

    <CheckBox
        android:id="@+id/checkbox_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cool_water"/>

    <CheckBox
        android:id="@+id/checkbox_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clothing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:paddingTop="@dimen/questionHeaderPadding"
        android:text="@string/question4"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPadding"
        android:text="@string/temperature_question"
        android:textColor="@color/defaultText"
        android:textSize="@dimen/textSize"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <SeekBar
        android:id="@+id/temeperature_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="40"
        android:progress="31"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/temeperature_seek_bar"
    android:paddingLeft="@dimen/screenMargin"
    android:text="@string/min_temp"
    android:textSize="@dimen/headerSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/temeperature_seek_bar"
        android:paddingLeft="@dimen/screenMargin"
        android:text="@string/max_temp"
        android:textSize="@dimen/headerSize"/>

    <TextView
        android:id="@+id/current_temeperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temeperature_seek_bar"
        android:layout_centerInParent="true"
        android:text="@string/current_temp"
        android:textSize="@dimen/headerSize"/>
</RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:paddingTop="@dimen/questionHeaderPadding"
        android:text="@string/question5"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPadding"
        android:text="@string/animal_question"
        android:textColor="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <ImageView
        android:layout_width="@dimen/imageSizeBig"
        android:layout_height="@dimen/imageSizeBig"
        android:layout_weight="1"
        android:contentDescription="@string/cdes_animal"
        android:src="@drawable/animal_image"/>
    
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:text="@string/question6"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/second_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bone_break_question"
        android:textColorHint="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:text="@string/question7"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPadding"
        android:text="@string/fracture_question"
        android:textColor="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_option_one_fracture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tie_rope"
            android:layout_weight="5" />

        <RadioButton
            android:id="@+id/radio_option_two_fracture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splint"
            android:layout_weight="5"/>

        <RadioButton
            android:id="@+id/radio_option_three_fracture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice"
            android:layout_weight="5" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:paddingTop="@dimen/questionHeaderPadding"
        android:text="@string/question8"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/questionHeaderPaddingSmall"
        android:text="@string/chocking_question"
        android:textColor="@color/defaultText"
        android:textSize="@dimen/textSize"/>

    <CheckBox
        android:id="@+id/checkbox_c_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_water"/>

    <CheckBox
        android:id="@+id/checkbox_c_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hug_pressure"/>

    <CheckBox
        android:id="@+id/checkbox_c_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thurst"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="submitAnswers"
        android:text="@string/submit"/>

    <TextView
        android:id="@+id/correct_answers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize" />
</LinearLayout>
</ScrollView>